jenkins/master-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jenkins-server
  name: jenkins
  namespace: devops-tools
spec:
  replicas: 1
  revisionHistoryLimit: 10
  nodeAffinity:
    required:
      nodeSelectorTerms:
      - matchExpressions:
        - key: node
          operator: In
          values:
          - master
  selector:
    matchLabels:
      app: jenkins-server
  template:
    metadata:
      labels:
        app: jenkins-server
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node
                operator: In
                values:
                - master
      securityContext:
        fsGroup: 1000 
        runAsUser: 1000
      containers:
      - image: jenkins/jenkins:lts-jdk11
        imagePullPolicy: IfNotPresent
        name: jenkins            
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 50000
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /login
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 2
          timeoutSeconds: 5
        
        resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: data-disk
          mountPath: /var/jenkins_home
        
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data-disk
        persistentVolumeClaim:
          claimName: jenkins-pv-claim
