jenkins/master-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-master-ingress
  namespace: devops-tools
spec:
  defaultBackend:
    service:
      name: jenkins-service
      port:
        number: 8080
---
